Se cambio direccionado (face/*.xhtml) y se corrigio link a Base.css en Home.

--- a/ProyectoTISJ-war/web/Administrador/Home.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/Home.xhtml
@@ -5,16 +5,13 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Administrador</title>
-        <link rel="stylesheet" href="../Resources/CSS/Base.css" />
+        <link rel="stylesheet" href="./Resources/CSS/Base.css" />
     </h:head>
     <h:body>
         <ui:include src="Menu.xhtml" />
-        
-        
+        <div class="contentBody"> 
 
-<div class="contentBody"> 
-
-</div>
+        </div>
     </h:body>
 </html>
 
