--- a/ProyectoTISJ-war/web/Administrador/Menu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/Menu.xhtml
@@ -3,40 +3,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <div class="nav"> 
-	<div class="navHeader">
-        <div class="navBadge">
-            <h:graphicImage url="#{administradorBean.imagenAdministrador}" width="100%" height="100%" style="max-width:500px"/>
-         </div>
-         <div class="navLabel">
-             <h:outputText value="#{administradorBean.nombreAdministrador}"/>
-         </div>
-         <div class="navLabel">
-         	(Administrativo)
-         </div>
-	</div>
-    <div class="navDivider"></div>
-         
-          <div class="navOptMenu">
-         	Docentes
-         </div>
-         <div class="navDivider"></div>
-	
-         <div class="navOptMenu">
-         	Estudiantes
-         </div>
-         <div class="navDivider"></div>
-	
-         <div class="navOptMenu">
-       		Asignaturas
-         </div>
-         <div class="navDivider"></div>
-	
-         <div class="navOptMenu">
-         	Encuestas
-         </div>
-         <div class="navDivider"></div>
-    </div>
+        <div class="nav"> 
+            <div class="navHeader">
+            <div class="navBadge">
+                <h:graphicImage url="#{administradorBean.imagenAdministrador}" width="100%" height="100%" style="max-width:500px"/>
+             </div>
+             <div class="navLabel">
+                 <h:outputText value="#{administradorBean.nombreAdministrador}"/>
+             </div>
+             <div class="navLabel">
+                    (Administrador)
+             </div>
+            </div>
+        <div class="navDivider"></div>
+
+              <div class="navOptMenu">
+                    Docentes
+             </div>
+             <div class="navDivider"></div>
+
+             <div class="navOptMenu">
+                    Estudiantes
+             </div>
+             <div class="navDivider"></div>
+
+             <div class="navOptMenu">
+                    Asignaturas
+             </div>
+             <div class="navDivider"></div>
+
+             <div class="navOptMenu">
+                    Encuestas
+             </div>
+             <div class="navDivider"></div>
+        </div>
 
 </html>
 
