--- a/ProyectoTISJ-war/web/Estudiante/Home.xhtml
+++ b/ProyectoTISJ-war/web/Estudiante/Home.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Administrador</title>
-        <link rel="stylesheet" href="../Resources/CSS/Base.css" />
+        <link rel="stylesheet" href="./Resources/CSS/Base.css" />
     </h:head>
     <h:body>
         <div class="nav"> 
