--- a/ProyectoTISJ-war/web/Administrador/AdministradorHome.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorHome.xhtml
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="./Resources/CSS/Base.css" />
     </h:head>
     <h:body>
-        <ui:include src="Menu.xhtml" />
+        <ui:include src="AdministradorMenu.xhtml" />
         <div class="contentBody"> 
-
+        
         </div>
     </h:body>
 </html>
