Se corigio diseño de la clase curso. Se quito el contrato del docente y se agrego a Curso. Se implementa clase para subirArchivos. Se crea la pagina para el caso de uso registrar Docente.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorHome.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorHome.xhtml
@@ -5,7 +5,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Administrador</title>
-        <link rel="stylesheet" href="./Resources/CSS/Base.css" />
+        <link rel="stylesheet" href="../Resources/CSS/Base.css" />
+
     </h:head>
     <h:body>
         <ui:include src="AdministradorMenu.xhtml" />
