--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -16,11 +16,11 @@
              </div>
             </div>
         <div class="navDivider"></div>
-            <a href="Administrador/AdministradorDocente.xhtml">
+            <h:link outcome="AdministradorDocente">
               <div class="navOptMenu">
                   Docente
              </div>
-            </a>
+            </h:link>
         
         <div class="navDivider"></div>
              <a href="">
