--- a/ProyectoTISJ-war/web/Docente/RegistrarDocente.xhtml
+++ b/ProyectoTISJ-war/web/Docente/RegistrarDocente.xhtml
@@ -8,7 +8,7 @@
             Registrar Nuevo Docente
         </div>
         <div id="inputBox">
-            <h:form>
+            <h:form enctype="multipart/form-data">
                 <h:outputLabel value="Nombre: "/><br></br>
                     <h:inputText value="#{docenteRegistroBean.nombreDocente}" required="true" requiredMessage="Debes ingresar un nombre."/><br></br>
                 <h:outputLabel value="Nickname: "/><br></br>
@@ -17,9 +17,12 @@
                     <h:inputText value="#{docenteRegistroBean.correoDocente}" required="true" requiredMessage="Debes ingresar un correo."/><br></br>
                 <h:outputLabel value="Cedula: "/><br></br>
                     <h:inputText value="#{docenteRegistroBean.cedulaDocente}" required="true" requiredMessage="Debes ingresar una cedula." /><br></br>
+                <h:outputLabel value="Imagen "/><br></br>
+                    <h:inputFile id="fileInput" value="#{docenteRegistroBean.imagenDocente}" required="false"/>
+                        <br></br>                    
                 <h:outputLabel value="Contraseña: "/><br></br>
                     <h:inputSecret value="#{docenteRegistroBean.passwordDocente}" required="true" requiredMessage="Debes ingresar una contraseña." /><br></br>
-                 
+                    
                 <h:commandButton action="#{docenteRegistroBean.registrarDocente()}" type="submit" value="Registrar"/>                    
                 <h:commandButton type="reset" value="Reset"/>                    
             </h:form>
