Se continuo el desarrollo del caso de uso registrar docente

--- a/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
@@ -13,6 +13,7 @@
         <script src="../Resources/Scripts/MouseOverDocente.js"></script>
         <script src="../Resources/Scripts/RotateAddButton.js"></script>
         <script src="../Resources/Scripts/optionMenuDocente.js"></script>
+        <script src="../Resources/Scripts/UpdateImage.js"></script>
     </h:head>
     <h:body>
         <ui:include src="AdministradorMenu.xhtml" />
@@ -59,7 +60,6 @@
                     </a>
                 </div>                
             </ui:insert>
-            
         </div>
     </h:body>
 </html>
