Se continuo el desarrollo del caso de uso registrar docente

--- a/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
@@ -27,7 +27,7 @@
                             <div class="optionContainer">
                                 <div class="optionButton">
                                     <div class="optButtonImagen">
-                                        <img src="edit.png" width="48" height="48" alt="edit"/>
+                                        <img src="../Resources/Images/edit.png" width="48" height="48" alt="edit"/>
                                     </div>
                                     <div class="optButtonTexto">
                                         Editar
@@ -35,7 +35,7 @@
                                 </div>
                                 <div class="optionButton">
                                     <div class="optButtonImagen">
-                                        <img src="delete.png" width="48" height="48" alt="edit"/>
+                                        <img src="../Resources/Images/delete.png" width="48" height="48" alt="edit"/>
                                     </div>
                                     <div class="optButtonTexto">
                                         Eliminar
