se cambio el scrollbar

--- a/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
@@ -14,6 +14,8 @@
         <script src="../Resources/Scripts/RotateAddButton.js"></script>
         <script src="../Resources/Scripts/optionMenuDocente.js"></script>
         <script src="../Resources/Scripts/UpdateImage.js"></script>
+        <script src="../Resources/Scripts/Slimscroll.js"></script>
+        <script src="../Resources/Scripts/ScrollBar.js"></script>
     </h:head>
     <h:body>
         <ui:include src="AdministradorMenu.xhtml" />
