Se agrego un CSS para mensajes. Se agregaron mensajes para comprobaciones en RegistroDocente.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
@@ -8,6 +8,8 @@
         <title>Administrador: Docente</title>
         <link rel="stylesheet" href="../Resources/CSS/Docente.css" />
         <link rel="stylesheet" href="../Resources/CSS/Base.css" />
+        <link rel="stylesheet" href="../Resources/CSS/Mensajes.css" />
+        
         <script src="../Resources/Scripts/jquery-1.11.3.min.js"></script>
         <script src="../Resources/Scripts/jquery-ui.js"></script>
         <script src="../Resources/Scripts/MouseOverDocente.js"></script>
