--- a/ProyectoTISJ-war/web/Docente/RegistrarDocente.xhtml
+++ b/ProyectoTISJ-war/web/Docente/RegistrarDocente.xhtml
@@ -24,7 +24,8 @@
                     </div>
                     <div class="textoMenuOpcion"> 
                         <h:inputText value="#{docenteRegistroBean.nombreDocente}" required="true" requiredMessage="Debes ingresar un nombre."
-                                     p:placeholder="Nombre de Docente " class="Texto" id="inputNombre"/><br/><h:message for="inputNombre"/>
+                                     p:placeholder="Nombre de Docente " class="Texto" id="inputNombre"/><br/>
+                        <h:message class="error" for="inputNombre"/>
                     </div>
                 </div>
                 <div class="menuOpcion">
@@ -33,7 +34,8 @@
                     </div>
                     <div class="textoMenuOpcion"> 
                         <h:inputSecret value="#{docenteRegistroBean.passwordDocente}" required="true" requiredMessage="Debes ingresar una contraseña."
-                                       p:placeholder="Contraseña de Docente" class="Texto" id="inputPass"/><br/><h:message for="inputPass"/>
+                                       p:placeholder="Contraseña de Docente" class="Texto" id="inputPass"/><br/>
+                        <h:message class="error" for="inputPass"/>
                     </div>
                 </div>
                 <div class="menuOpcion">
@@ -42,7 +44,8 @@
                     </div>
                     <div class="textoMenuOpcion"> 
                         <h:inputText value="#{docenteRegistroBean.correoDocente}" required="true" requiredMessage="Debes ingresar un correo." 
-                                     p:placeholder="Correo de Docente" class="Texto" id="inputCorreo"/><br/><h:message for="inputCorreo"/>
+                                     p:placeholder="Correo de Docente" class="Texto" id="inputCorreo"/><br/>
+                        <h:message class="error" for="inputCorreo"/>
                     </div>
                 </div>
                 <div class="menuOpcion">
