--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -6,7 +6,7 @@
     <div class="nav"> 
         <div class="navHeader">
             <div class="navBadge">
-                <a href="AdministradorPerfil.xhtml" ><h:graphicImage url="#{administradorBean.imagenAdministrador}" width="100%" height="100%" style="max-width:500px"/></a> 
+                <a href="../Administrador/AdministradorPerfil.xhtml" ><h:graphicImage url="#{administradorBean.imagenAdministrador}" width="100%" height="100%" style="max-width:500px"/></a> 
             </div>
             <div class="navLabel">
                 <h:outputText value="#{administradorBean.nombreAdministrador}"/>
