--- a/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorDocente.xhtml
@@ -18,6 +18,7 @@
         <script src="../Resources/Scripts/UpdateImage.js"></script>
         <script src="../Resources/Scripts/Slimscroll.js"></script>
         <script src="../Resources/Scripts/ScrollBar.js"></script>
+        <script src="../Resources/Scripts/LlenarCamposFadeIn.js"></script>
     </h:head>
     <h:body>
         <ui:include src="AdministradorMenu.xhtml" />
