--- a/ProyectoTISJ-war/web/Administrador/AdministradorPerfil.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorPerfil.xhtml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition template="/Administrador/AdministradorDocente.xhtml"
+<ui:composition template="../Views/index.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
-    <ui:define name="interfazDocente">
+    <ui:define name="page_content">
         <h:form enctype="multipart/form-data" id="frmIngresoDatos">
             <div id="menuContainer">
                 <div class="menuOpcion">
@@ -73,4 +73,3 @@
         </h:form>      
     </ui:define>
 </ui:composition>
-
