--- a/ProyectoTISJ-war/web/Docente/RegistrarDocente.xhtml
+++ b/ProyectoTISJ-war/web/Docente/RegistrarDocente.xhtml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition template="/Administrador/AdministradorDocente.xhtml"
+<ui:composition template="../Views/index.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
-    <ui:define name="interfazDocente">
+    <ui:define name="page_content">
         <h:form id="frmIngresoDatos" enctype="multipart/form-data">
             <div id="menuContainer">
                 <div class="menuOpcion">
@@ -15,7 +15,7 @@
                     <div class="textoMenuOpcion"> 
                         <h:inputText value="#{docenteRegistroBean.cedulaDocente}" required="true" requiredMessage="Debes ingresar una cedula." 
                                      p:placeholder="Cedula de Docente" class="Texto" id="inputCedula"/><br/>
-                       <h:message class="error" for="inputCedula"/>              
+                        <h:message class="error" for="inputCedula"/>              
                     </div>
                 </div>
                 <div class="menuOpcion">
@@ -72,4 +72,3 @@
         </h:form>      
     </ui:define>
 </ui:composition>
-
