--- a/ProyectoTISJ-war/web/Administrativo/AdministrativoMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrativo/AdministrativoMenu.xhtml
@@ -6,10 +6,10 @@
         <div class="nav"> 
             <div class="navHeader">
             <div class="navBadge">
-                <h:graphicImage url="#{administrativoBean.imagenAdministrativo}" width="100%" height="100%" style="max-width:500px"/>
+                <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
              </div>
              <div class="navLabel">
-                 <h:outputText value="#{administrativoBean.nombreAdministrativo}"/>
+                 <h:outputText value="#{usuarioBean.nombreUsuario}"/>
              </div>
              <div class="navLabel">
                     (Administrativo)
