--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -6,10 +6,10 @@
     <div class="nav"> 
         <div class="navHeader">
             <div class="navBadge">
-                <h:graphicImage url="#{docenteBean.imagenDocente}" width="100%" height="100%" style="max-width:500px"/>
+                <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
             </div>
             <div class="navLabel">
-                <h:outputText value="#{docenteBean.nombreDocente}"/>
+                <h:outputText value="#{usuarioBean.nombreUsuario}"/>
             </div>
             <div class="navLabel">
                 (Docente)
