--- a/ProyectoTISJ-war/web/Docente/ListarDocentes.xhtml
+++ b/ProyectoTISJ-war/web/Docente/ListarDocentes.xhtml
@@ -37,7 +37,7 @@
         </c:forEach>
         <div class="docente">
             <div class="nombreDocente">Registrar Docente</div>
-            <a href="../Docente/RegistrarDocente.xhtml">
+            <a href="../Usuario/RegistrarUsuario.xhtml?rol=Docente">
                 <div class="addContainer"> 
                     <h:graphicImage url="../Resources/Images/add.png" id="add"/> 
                 </div>
