--- a/ProyectoTISJ-war/web/Estudiante/EstudianteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Estudiante/EstudianteMenu.xhtml
@@ -6,10 +6,10 @@
     <div class="nav"> 
         <div class="navHeader">
             <div class="navBadge">
-                <h:graphicImage url="#{estudianteBean.imagenEstudiante}" width="100%" height="100%" style="max-width:500px"/>
+                <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
             </div>
             <div class="navLabel">
-                <h:outputText value="#{estudianteBean.nombreEstudiante}"/>
+                <h:outputText value="#{usuarioBean.nombreUsuario}"/>
             </div>
             <div class="navLabel">
                 (Estudiante)
